--- a/level3_design/Makefile
+++ b/level3_design/Makefile
@@ -4,9 +4,9 @@ TOPLEVEL_LANG ?= verilog
 
 PWD=$(shell pwd)
 
-VERILOG_SOURCES = $(PWD)/               # provide your design path
+VERILOG_SOURCES = $(PWD)/design.v              # provide your design path
 
-TOPLEVEL :=           # design file
+TOPLEVEL := design_top      # design file
 MODULE   :=     # test file
 
 include $(shell cocotb-config --makefiles)/Makefile.sim
