--- a/level3_design/Makefile
+++ b/level3_design/Makefile
@@ -7,7 +7,7 @@ PWD=$(shell pwd)
 VERILOG_SOURCES = $(PWD)/design.v              # provide your design path
 
 TOPLEVEL := design_top      # design file
-MODULE   :=     # test file
+MODULE   := alu_testbench    # test file
 
 include $(shell cocotb-config --makefiles)/Makefile.sim
 
